@@ -634,6 +634,9 @@ struct global_options {
     enum cpu_info cpu;                   /* -0|1|2|3|4|5|6 & -fp{0|2|3|5|6|c} option */
     enum fastcall_type fctype;           /* -zf0 & -zf1 option */
     bool        syntax_check_only;       /* -Zs option */
+#if ELF_SUPPORT
+    bool        no_pic;                  /* -nopic option (elf64 only); v2.21 */
+#endif
 #if MANGLERSUPP
     enum naming_types naming_convention; /* OW naming peculiarities */
 #endif
